Last Update 27Oct2025

--- a/T.EX.T/packages.config
+++ b/T.EX.T/packages.config
@@ -22,6 +22,7 @@
   <package id="Microsoft.IdentityModel.Protocols" version="7.7.1" targetFramework="net481" />
   <package id="Microsoft.IdentityModel.Protocols.OpenIdConnect" version="7.7.1" targetFramework="net481" />
   <package id="Microsoft.IdentityModel.Tokens" version="7.7.1" targetFramework="net481" />
+  <package id="Newtonsoft.Json" version="13.0.4" targetFramework="net481" />
   <package id="System.Buffers" version="4.5.1" targetFramework="net481" />
   <package id="System.ClientModel" version="1.5.1" targetFramework="net481" />
   <package id="System.Configuration.ConfigurationManager" version="9.0.10" targetFramework="net481" />
